# ShepardOS

./: .gitignore  ARCHITECTURE.md  CHANGELOG_AUTH.md  EXAMPLES.md  GETTING_STARTED.md  LICENSE  README.md  SUMMARY.md  TERMINAL_GUIDE.md  run.sh  setup.sh
backend/: README.md  database.py  main.py  pyproject.toml  requirements.txt  schemas.py  seed_data.py  shepardos.db
backend/routers/: __init__.py  audit.py  currency.py  gatekeeping.py  groups.py  permissions.py  roles.py  terminals.py  users.py
frontend/: Cargo.toml  README.md
frontend/src/: api.rs  app.rs  main.rs  terminal_mode.rs  ui.rs
